[package]
name = "ues"
version = "3.0.1"
authors = ["Bitflogger<earl.dukerschein@wisc.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.build-override]
debug = true

[dependencies]
rand = "0.8.5"
rayon = "1.8.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
readonly = "0.2.11"
unicode-segmentation = "1.10.1"
