[package]
name = "ues"
version = "5.0.0"
authors = ["Bitflogger<earl.dukerschein@wisc.edu>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.build-override]
debug = true

[dependencies]
rand = "0.9.1"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml_ng = "0.10.0"
readonly = "0.2.13"
unicode-segmentation = "1.12.0"
